ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-project-ingress
  namespace: ds-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: our_subdomain.cloudns.net
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
